--- a/kitty/launch.conf
+++ b/kitty/launch.conf
@@ -1,1 +1,1 @@
-launch zsh -c "zellij --layout ~/.config/zellij/layouts/boring.kdl"
+#launch zsh -c "zellij --layout ~/.config/zellij/layouts/boring.kdl"
