Add some NeoVim plugins and remove OS Window Close confirmation from Kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -255,3 +255,6 @@ source ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting/customthemes/catppucc
 
 # Set cursor_shape
 cursor_shape beam 
+
+# Turn off window close confirmation
+confirm_os_window_close 0
